[tool.poetry]
name = "Ethernaut CTF"
version = "0.1.0"
description = "Ethernaut CTF solutions with Ape and Vyper"
authors = ["0xJCN"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-ape = "^0.6.0"
vyper = { git = "https://github.com/vyperlang/vyper.git", rev="ae7d6d28"} # need vyper 0.3.8 for raw_revert

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
